--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>twix || Bagshop Online</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -231,10 +231,10 @@
     <!-- section 5 end here -->
 
 
-    <section style="height: 300px; background-color: rgb(186, 226, 226);"
-      class="d-flex align-items-center justify-content-center mt-5" id="subscribe">
+    <section style="height: 300px; background-color:rgb(228, 218, 177);"
+      class="d-flex align-items-center justify-content-center mt-5 p-3" id="subscribe">
       <div>
-        <h1>Subscrive Our News Letter</h1>
+        <h1 style="color:darkblue; border: 1px solid rgb(141, 142, 146);padding: 3px;font-family: sans-serif;">Subscrive Our News Letter</h1>
         <h5>Get upadates on special offer</h5>
         <input class="p-2" type="email" placeholder="Enter your email address"> <br>
         <button class="header-btn mt-1">SUBMIT</button>
